--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,13 @@ asgiref==3.11.0
 crispy-bootstrap4==2025.6
 Django==6.0.1
 django-crispy-forms==2.5
+dotenv==0.9.9
+flake8==7.3.0
+mccabe==0.7.0
+psycopg2-binary==2.9.11
+pycodestyle==2.14.0
+pyflakes==3.4.0
+python-dotenv==1.2.1
 sqlparse==0.5.5
 tzdata==2025.3
+whitenoise==6.11.0
