--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ Django==6.0.1
 django-crispy-forms==2.5
 dotenv==0.9.9
 flake8==7.3.0
+gunicorn==25.1.0
 mccabe==0.7.0
+packaging==26.0
 psycopg2-binary==2.9.11
 pycodestyle==2.14.0
 pyflakes==3.4.0
